# ChangeLog for media-sound/abcm2ps
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/abcm2ps/ChangeLog,v 1.93 2014/06/03 06:42:34 radhermit Exp $

*abcm2ps-8.0.4 (03 Jun 2014)
*abcm2ps-7.8.3 (03 Jun 2014)

  03 Jun 2014; Tim Harder <radhermit@gentoo.org> +abcm2ps-7.8.3.ebuild,
  +abcm2ps-8.0.4.ebuild:
  Version bumps.

*abcm2ps-8.0.2 (04 Apr 2014)
*abcm2ps-7.8.1 (04 Apr 2014)

  04 Apr 2014; Tim Harder <radhermit@gentoo.org> +abcm2ps-7.8.1.ebuild,
  +abcm2ps-8.0.2.ebuild:
  Version bumps.

*abcm2ps-7.8.0 (31 Mar 2014)

  31 Mar 2014; Tim Harder <radhermit@gentoo.org> +abcm2ps-7.8.0.ebuild:
  Version bump.

  08 Mar 2014; Tim Harder <radhermit@gentoo.org> -abcm2ps-7.6.8.ebuild,
  -abcm2ps-7.6.10.ebuild:
  Remove old.

*abcm2ps-7.7.2 (08 Mar 2014)

  08 Mar 2014; Tim Harder <radhermit@gentoo.org> +abcm2ps-7.7.2.ebuild:
  Version bump.

*abcm2ps-7.7.1 (28 Feb 2014)

  28 Feb 2014; Tim Harder <radhermit@gentoo.org> +abcm2ps-7.7.1.ebuild:
  Version bump.

  25 Jan 2014; Tim Harder <radhermit@gentoo.org> -abcm2ps-7.5.8.ebuild,
  -abcm2ps-7.6.0.ebuild, -abcm2ps-7.6.3.ebuild, -abcm2ps-7.6.7.ebuild:
  Remove old.

*abcm2ps-7.6.10 (25 Jan 2014)

  25 Jan 2014; Tim Harder <radhermit@gentoo.org> +abcm2ps-7.6.10.ebuild:
  Version bump.

*abcm2ps-7.6.8 (23 Nov 2013)

  23 Nov 2013; Tim Harder <radhermit@gentoo.org> +abcm2ps-7.6.8.ebuild:
  Version bump.

*abcm2ps-7.6.7 (12 Nov 2013)

  12 Nov 2013; Tim Harder <radhermit@gentoo.org> +abcm2ps-7.6.7.ebuild:
  Version bump.

*abcm2ps-7.6.3 (27 Oct 2013)

  27 Oct 2013; Tim Harder <radhermit@gentoo.org> +abcm2ps-7.6.3.ebuild:
  Version bump.

  16 Sep 2013; Tim Harder <radhermit@gentoo.org> -abcm2ps-7.5.2.ebuild,
  -abcm2ps-7.5.4.ebuild, -abcm2ps-7.5.5.ebuild, -abcm2ps-7.5.7.ebuild:
  Remove old.

*abcm2ps-7.6.0 (16 Sep 2013)

  16 Sep 2013; Tim Harder <radhermit@gentoo.org> +abcm2ps-7.6.0.ebuild:
  Version bump.

*abcm2ps-7.5.8 (16 Aug 2013)
