@@ -9,6 +9,7 @@ DIST abcm2ps-7.8.1.tar.gz 326739 SHA256 3451b2ecc96e9361719196fbe1b032babd47392d
 DIST abcm2ps-7.8.3.tar.gz 327272 SHA256 0d60fe1cf9e6e1ace646219753b94c5b261593d0513bd5c96816c9c54e8a28c1 SHA512 7750f41068378ce44412603d9e1c94ca031abd091e587f268548258da94c54c4aaaafd26bc549424bb723e97022fadc770dbabb95fcf64675e700a61ebe65d86 WHIRLPOOL 8b6c8d6bcf67c91a8f93b5b8d5492336db8fb6ed33d013edd4a64953e3507881b947e83369fb408b6390b0db755b85b2adb3e7cefa6eb770ba40cf57b03dfa3a
 DIST abcm2ps-8.0.2.tar.gz 250504 SHA256 671128f51ffb13ed5f98de9d4eafd7c46062d5bccda8c8ff88daa7bd291c09b5 SHA512 acca61ed4115dd9d831362b89345059c22a108380e4d1dbabf34c5b4deaf994a86f9dc9c959ff43cf705519982bc801f54435996eda61a8e38f281cd3b9075fa WHIRLPOOL de11e6efae76e2524c546fd378e03479a038b6f6654c5062441bfce7a383a05ea46a056a025460d5daf5ea31cd6347eabe7f23247cdb95e7da2d373b1219f4bb
 DIST abcm2ps-8.0.4.tar.gz 249813 SHA256 7b57917f8ff78405523c69af89cc039108d9d47209703da26a8a9fe115e59f71 SHA512 86f80bd8562f2cbc560bf1f4313b24b4c679ba27e5eacfe68d93053314d32227eb15f0aa36d48712a5b4259003b190b9366b3033f2157d77bdcc3e911fb278ac WHIRLPOOL 65b03a74ed55073b20dde65dbf88fb0e4ad22759f1e3d6cbe748a9e3abcc764a2180a5ea79b338548c05669b5f79466501316e1b682bb90e99d8760bd9f553e4
+DIST abcm2ps-8.3.1.tar.gz 249582 SHA256 aa0090c44d0a33454d57919b9a6fcfb529f3bac8332e99f3a5d4cc6990eacbc4 SHA512 e0f3316893b94b97edcfdcf29b8630a67006e6ff3b85b8523181f8ee0c11e3a5595c6ef78dd2f64505bf6a0f141ab5e4391590af6676606fcb6f5336286f8f11 WHIRLPOOL 85740113cbda28b980e1ceed956b6f9f78e345ae457339f4a2db1543e4a4aa4831e459203c9056414f27a34af74da1192b49a9b316b8e37c9be270517b46befe
 DIST transpose_abc.pl 21045 SHA256 bd6960872bfbc9f71f183f36d533ea33b8cf62a6027b447f0b0b8adfa25a2848 SHA512 dc2623608a7b59d7e0c4d25160e69f696f170e9938dc3e035edbaf6f0163b4c6139892ec8734ea2aaba997507dcf32208562e898690600dc3c199046d4d151f3 WHIRLPOOL 81e327bbd76b40826adab06f7756c79c60289b21432b792c848db3ba1354528fa4f1a074cba890b6087cfac6e712427c6cbb2c9e6679c8ced22c362f6ec005f3
 EBUILD abcm2ps-6.6.22.ebuild 953 SHA256 5add5f79340d88fd252d2d1433f4a3b0953dbbcdc8fd4acb47d90f478ae1dc4a SHA512 eca6f9af2e3dcf3519b31fd8df49c5902021712bbf1cd548ec39d46be64bbcbed31251d3fa31e90e0bdb3f0734a2e30335c608151db551c23ef5d031dc3a02f9 WHIRLPOOL ae88fd6ab795197efea1300d814f5aa4eb4d88e286cd599523e7f81014b7d86b4779acbbab75315147915fabb89671bb45e007dd217746ede8b136f0c966e7e1
 EBUILD abcm2ps-7.7.1.ebuild 960 SHA256 3c37701ffc2976d90980d903bfee110972ddec70c4ddc28ec54f5dbf3e189f04 SHA512 19761710e9dd0c2cfe813644a509159ed7c22aca64cef918f3840e1c6e52b7d49e89afade91af3a053f2a20daa521913a8ccb1bd421000ba849fdeace4338728 WHIRLPOOL dcd6a67d8314ff7e3ba514b4a1db377e6bf14884a867556938e378735e19c4da2ef139c50bb34556cf934e00719cad9707d6b5f6078e8c37ed276bcece812cde
@@ -18,16 +19,17 @@ EBUILD abcm2ps-7.8.1.ebuild 960 SHA256 8670fc1747c4e867fae02bc660056f6431516e24b
 EBUILD abcm2ps-7.8.3.ebuild 960 SHA256 bb3d78b2f008367e93efacecccd7aa0f9ae72196fc8d7252c487ce261f1be075 SHA512 18cf89f944d95170f7189591a6eb557b335b11afd02fed85db5d1fea5408808ced29021a04efad15563e4d76ead1d3e4c80df45d7e22bdc36886ba207b572e5c WHIRLPOOL b0ad7cc8461304f4cd2b6067d23e90c7c633b9decea295518d9940b5df50ed71b868557e91e77814016f74d5b1694f136913537aa7c37acb3856e0b9f1875958
 EBUILD abcm2ps-8.0.2.ebuild 960 SHA256 ce2dc4020a5dea20d40b3dfd1f83c01e666ebe5de82fcd2b0e173f31a4560c7c SHA512 8d4e26e6b618c048a3d439da1cc65cbab25e6bdb5c31417bd50f39493e9f08b5a1a13b3f47bca0bcb34c6f5e48c97db76ebe3bb1b7788251906e557c563d255b WHIRLPOOL cce1391147500d8e132c885f9d6436c3e37edfa36a40fd88bab1d5269e00e3bf63474ddb186387e59e029acdaaea4858c74dd08a93db56da3e0850f38eab41a2
 EBUILD abcm2ps-8.0.4.ebuild 960 SHA256 8d45d870255d70e563f417d6f8fc017c2830a4bb314008087e8a8dad6cda658c SHA512 c230c3545a9e6597dfe30a0f44d4da1562556e28db0e94c3b8315476425d873d0c34fc4eaa81a4cbb8272b94f00a523e571f69b7a9add727155e415461e068d8 WHIRLPOOL 96eaff95817437a92620c0511bae075441b4990dd87154596e94832814a59e5dee52adef4b31b4d83d036ecbc23b6e370b64d94f25d365150d57be38b270cb2c
-MISC ChangeLog 12391 SHA256 0881f26ea2eed797bc71b81731c7c155dae83d6de25b70f40af58375bb0bb804 SHA512 890d28e65d2b44177bdde1f9542f4537cba29748c8f1b182565f00e43dc5896b87015c96a1c3d9101c4219f9d77200287059829f51683dd67e9226b7eb9cb9b4 WHIRLPOOL f7a8a04fb40c7c556f26cddfa26247c47870e4a29c4871aeb3af09de2c91822697822c126102fd8c9fc6812ba26d2518a3c6c32d71d3c318b78504bb7670490e
+EBUILD abcm2ps-8.3.1.ebuild 1046 SHA256 23eba4ce322cb7e774b4d1130ed628a4f8c0e7388095a0761de7847a0708b652 SHA512 c4c0c2e4957be82a47ddba70567fbbdce8e3c9c796de4ed590861d78565792c591dd8723d6b880e507852c07da917a14243646266ea24eefb648eac14667296a WHIRLPOOL 687a41f43772ffb54f5250cd41fb1a370556398eedf6f1cab74c51db2fedbfc51553e64003da4664ef0eb3f524fac4892aab7784afe1eb80253f54955e939752
+MISC ChangeLog 12510 SHA256 40c9112e4f4c1a1e92f3268d76fdb877ddac6399032d6ce349956c30bf83965d SHA512 df78c3d632ab7a89f4617642eaa8817db1279727d9142ce76a247edf1120f8f88249f95e06cc5cd60b4ad1dc56de26ca43a1ac57a60f0979b91b3f586942aee5 WHIRLPOOL e1862837201db0274335d2195d1de2903dca1865350d6fe522f9d5068d7c98f3c61c4b6f5cc6025f4d5187cbd583f3f17305a244718e6934059a65fbcfbe972c
 MISC metadata.xml 266 SHA256 b6d28625a7ff66404b06e40afb779f07f18be590235136a1229eff61c270eddd SHA512 c77f9248d85edc37943b704db4083911a5151d9903141b5f2e4dfe61cb1ebc1bedd57a54730507af3ced6586f9c7474b80386b6c65903a330351e0237a7f2b62 WHIRLPOOL 792da133a217d8a169e408e09f709c944225aa2a7a521305a98718a1aa046be2d06d5bf8f838e1309a6f750515ac4376f3cdcb0693cad0127d6287ee7d867b42
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iQEcBAEBCAAGBQJTjW5dAAoJEEqz6FtPBkyjBbwH/2bQ58psrMn3F6Yn0f1u20AA
-bQeco+w0ntniXhZjQBcipMKzXHGqd1LLLYJtgF3MlW0gNwpc0Q4DEqfu7XTbWUej
-Ccty1Ziu7GatBrzxRU1RZD3r3PrA5/wjLY3bWEsb2x0JRz7WfiUBxcFzDYm7EM4M
-6FeaNyiWf4Fxi67IZnrsdp4Hlb9GBPb1TM2N9hV9++EXD0+u3Ftc2LkqIBgXpWRK
-OZ+FPIhSKpRCMhdtnEwyYtnq95/fh4edLTuTBA6LrLobWuz5grGBCmzr8In2ZSJr
-Gue3Wpmedn6NMGQp220VIfe7cjk49uRynMTCwkyXLt/M1+dFL+WuF/G/CSR3AFs=
-=qhpZ
+iQEcBAEBCAAGBQJUQd1LAAoJEEqz6FtPBkyjU/UH/38LlbrFiVimOm4GDPiSwkuP
+i9OX9HYbNbTKtSdB8ihSaKU4ZNSOtmUI6SJa198B2jFNTx71PD6aoSVPUu0GFU5G
+WCyDSFGsCb15vmPm+blS0w9rB/IMkqXbpec+iQ6sF9hV0uW+XVh/+FvJtX6H6KHG
+X6WLS3XIoLnLAW/UIXULlJOieb69l+w9daQnTXHTu5rnlKMCOA+7K/AWHpVPOVrw
+69z+LmRwNIciKUxBQQveTmJsbRWO4DO5nxZwnrBcl3h8SD9nzX3jRhRyU9WrlFCG
+EqFyhxniPE1lCFO0roHZqLyk68rW837bueY2H/NUgpUsExnZm2yuYoRyz4SiAXQ=
+=BCGq
 -----END PGP SIGNATURE-----
