@@ -7,21 +7,23 @@ DIST abcMIDI-2014-04-03.zip 507208 SHA256 e595b705adb513ea3f5e8b9a503f4e04872b1a
 DIST abcMIDI-2014-04-10.zip 507563 SHA256 ef7cb39129f4f3e8088eeb57aecc727c6de0df006a4dd8496bf6601847560fe4 SHA512 df5ced48aa3791b24f70be256a7c743a910dc0527d86552856897aa7797ad039a56dae0d45ebe7b95c656755f7122ed7e45bae144384947f112191bd397e3cd5 WHIRLPOOL 8dc30d1947101ad21c9267c661f4e1231c5dc34202ea093dd73bba8d9b73041b8f5b63d17d85fc48a64b7aaf305047a459fe4e61b6983235997dce26a78d9590
 DIST abcMIDI-2014-04-24.zip 507954 SHA256 bb75b235b08f9ba64fb819973238f136491334bfc0e50909c41914a92ac1d6dd SHA512 9531a307b45ed1550e89ccc354e6cd1ebfa2d7092f1c35ee0310e9932af7ce1815918ecf3738ceff509604921c6f8ed17eeac8a2c978432261bc611558631c7d WHIRLPOOL 094d1b9feee3e9427bbeb30a68f64f7c4a7cdd55ed39db329e1649de526a8279c6e6213f98b36ad435736500a9856c6ccca94035d3644f5d86a515c8c4fb0603
 DIST abcMIDI-2014-09-28.zip 510496 SHA256 c8ebad8e28823e2314ce7561e8864572fe19ff87fbfd341faba139c120a7edc6 SHA512 1023d18a70f5e245ed2fbdc532b6a0a40bd416952bba895ce7b493fb5c5db9dedc811eb5be60063c9764bfe96633971ea346d6da7245b2a93c2429d5fa6fdea6 WHIRLPOOL 11185e6a08607ce9f7ec61a1790cdd5d2f753c44b55d257c01f383482f5556be2f591baa3073bb6ef40b9b3925c459ea773a6f5588dbe6941728a173956fd591
+DIST abcMIDI-2014-10-16.zip 510732 SHA256 f8a63f5a7250333660ceb6e6eb5b9571adb328272eaf9358693e3361ca8cc3ee SHA512 d0c671061027b73f82a55a19812f565ef031a24fa1769db0062759dbb12977fd14c19a85a5a79db267975668aa1e6bbdefadbd3dee4ea282c5d0c426528f8f63 WHIRLPOOL 116377737619e58f0dafebf056ef47a6a7613e7e0c1db24c58c3c61bd9b6aff0362c503da7a08b404a2fd27ddcfd4e2a6484a7ba2e44633ee8a8f90afb4bab3b
 EBUILD abcmidi-2014.02.05.ebuild 955 SHA256 dbc5d29470f69ca32253c14eba52a005e7831bb53028a1e828751f6a2b48e90a SHA512 000d97f75e3d7f0e38cc31a56775f5c321d0a9100c45923f8d9734a61b59555458fc5d59b94c12159c2c71a1d599b7d09a5c9866ef940e426924280d25024c55 WHIRLPOOL 1079a9dd03ded1f43840601fc23d2b15ec71511fc1a355b22d09836ff6e12fea75e7edf1628ce839ae218315c6efafb3e8ce5ccb3723cca8cd945c9276ace48c
 EBUILD abcmidi-2014.04.03.ebuild 955 SHA256 a51ad85f29ecb0771fad6f05cccea9c4dfaa8e7530e40fd6da9b190345569496 SHA512 8c460eb80e0ff23efb0c9c6db8a47b4cf105f5050cb668d13a6edf4b9221d657a3c59564b74a276510feb3ff0c6789f26ada890c97f668b5736386deb5d4cdcd WHIRLPOOL 90413e376eeb76b9c7767684a668e5526057fcfc36371af2c76834d372952f306fa3c32102dd2f493c345ac81badaec040c4c3a523e20ed0e7e004e88dea7426
 EBUILD abcmidi-2014.04.10.ebuild 955 SHA256 c9c4ea05f0af5bedabc6b61ec70d93e12aff7e05bf7a9837ddf2f7f119a1c9c8 SHA512 ab2286b0d270915b4579b7446eec9bb33b203a88db5b8e3537a2b6c89e082d6468fb607a0a632c70d2c01969e73c6d89d1f5c79aa7fd618b337af67850600d7a WHIRLPOOL 62fc30a99e168cd8357470eb9510840f503e6e725cd2aa53ee0f433a3cc04edf6691e184f2137fe6c76927775dce74fb4e2b2e94806d0922a4e057436257dd9a
 EBUILD abcmidi-2014.04.24.ebuild 955 SHA256 0b06066a5eb646c373cf3245c24ef04ea1bd2b2210e46196a0fa2a5d5f8fbf4a SHA512 c8a3ac62a2c3dd72158e319981c681d6ecf786a9ea2ba2340c060dd35843445bd298b87c88830bd399e2c46a173f38ae76823ca02323c2f3abdb1aaab13a541b WHIRLPOOL 1d9784915e2de5c5e021cd5a723cbfb00a79f29f10568bf32fb22bb1a046fec45c7859feec7e48673427fb74cab4d5513ccea0553c304fe8f5a157b836ec4b95
 EBUILD abcmidi-2014.09.28.ebuild 955 SHA256 742cbb2b717cf794c58cd6f665ae583b0b944f50b9e23160a5f503fd4283fd82 SHA512 875664377fb8e7bce8342c475690412b3ca0b2b4357613fcdb74b4534e0e9375ff793828fbd58b45f381bd8bb530588852ddbe44bdf4bfb4d2bfface154d65af WHIRLPOOL 06cb9d4c6d0a91489fee1820f9e0cdf41f2150bf21d2ece3830cbe2bd4db17d369d1690c725eec9e68415ee843c17a7b0c4bb0f80bec52c934650f18b66bd197
-MISC ChangeLog 8001 SHA256 1ee14598ac17f193a721d50a9e19908138fe34975df1619528352c8ad7862a3f SHA512 4bc332671116c4148f384a8be6dfa819b30dcac6fec8f6f40543aceec1bf8069fcf9af26c894778ba3a8d3ef528b4fa1de87b6f8af5d362ba88e93a4c86f8a19 WHIRLPOOL 3eef4ef9575d2dfed829fc9a5c1421d564ad0e87c57b255a892319fe47b1b679c552ca91243fc4e73223ad3a7e20f72100b8e1d296889185ef7a32f96295de7a
+EBUILD abcmidi-2014.10.16.ebuild 955 SHA256 63c4b01f1b2018d92dddbdcea265fb35e82c5705eacbc52d69abba6e714f9dc7 SHA512 02f291f00f1031252d7250d10d122810f84eca09ac101a612344f1e31beef697c5550b4558e7806d74816342aa867a0142a56f8a9630a49ec9d588e4295470a7 WHIRLPOOL 345a14b3c72019d0b698e4a6528065b284a108a04aa59e8674c686aaefaa6c6736443ffb453963b12b3f6cc4409a2a99aa9088e93bccf9e01dbde62e5e0a81ff
+MISC ChangeLog 8130 SHA256 2e2cc5d055eef4fc4db0088e489abaf9e4a19fdb017cccae86e0bc462600b0e1 SHA512 3613caa1739b2017d515d2d769ad0f511b9357b991731248205b9596e5bcfd0bb81e16774a02074280adf0dce5da89454d793c5235f3afdca4b28f9bfefaa215 WHIRLPOOL e5a5adc7ca6d511d54c8575ba527dcde4b7975c58cf52da30730ec1a57951c5f527bbc73fe2ebf057ab9d93795d79feadf7e3ef6fdb86f52beba8dacd759e5bd
 MISC metadata.xml 158 SHA256 dfb5b47e6836db39fb187301dfcff1c2605e91d13d21db160806a563d8c75f9b SHA512 90f74979d228a35f81de50665ead63d228bc4f0d11f3def4832c9607f4242cbc4562db0a123bdcf2c4b6e0be78fc5565a65f75cdb53ed4c8d45544ebf74255dc WHIRLPOOL a90483bd4fa01ed5fa21bfe9f59c11b97c793146e3031eae342a3355c6dc2e4ef2b356af0bf711b5e16e16551c91d63ecdbb48e708df606017264e8bff5e9fe9
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJUNgJPAAoJEEqz6FtPBkyj5QsH/jvaQSi0Ai3+DHsboq8Lw9Ik
-kjgq09Czebn7pbBhrNEQSN+TiH+KlfH1n5+nt5INIvZ7bbtxBFyfORplb8S/gzUf
-9ga4erzkhmynZs+jAB7m5Jr8jvpL6PoOvld2LEUE4mB5MDEqazE3Tg2vuDpIErRe
-Sg3tuGfZoT+Vb+JrAG19XqPrJtKdYrNBn9z/ES0S/jFh+u+KBKKIduo62NKJRyBu
-ELg138bS+8uWudhh6k1a+bMh9oz6tglQZV6SfgPsq+Fn8I7EOL4gM42qyaPfOEzs
-VriOjiv9/WpiQ6JqiA97C246MwlaZ5YSWyjM9s1rpZOw7bzfrqNXDHPIhsTbSTg=
-=OU8Y
+iQEcBAEBCAAGBQJUQd2xAAoJEEqz6FtPBkyjyWIH/2MPGlHx/31tl2sahaxjSlVd
+vz2TmoO9Gq6unkyo8+iSnfEhSF4flvdMwhJkeUQ8v/c0Uyan7elJ8QSClkgU3hGB
+WHhUxUPZmexPd8CfT4zhHAWS/xxTeN9wCFTL3l7KxBog58YyHwT6TxQzAjO0nFZI
+O8QKsEIHabd0t5cV1+Ec+5NkoIk1ayVYp7uXpWW19vO8fe+jr48/K+smBGzn+qrJ
+H3MaFtBB4ZxwTuwH/8reJWdfUNy+l9FmEK1ZFVvui0jaQMlPm5OaRtk9sOUebY55
+WHaNpiMWQ2qHqaQ00IlV2xTUYrSJGZrcLKzdCBvVkOXzud4UI3zoHP0x2u5/ruw=
+=fsz+
 -----END PGP SIGNATURE-----
