@@ -1,6 +1,11 @@
 # ChangeLog for media-sound/abcmidi
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/abcmidi/ChangeLog,v 1.57 2014/10/09 03:34:06 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/abcmidi/ChangeLog,v 1.58 2014/10/18 03:25:34 radhermit Exp $
+
+*abcmidi-2014.10.16 (18 Oct 2014)
+
+  18 Oct 2014; Tim Harder <radhermit@gentoo.org> +abcmidi-2014.10.16.ebuild:
+  Version bump.
 
 *abcmidi-2014.09.28 (09 Oct 2014)
 
