@@ -1,6 +1,11 @@
 # ChangeLog for media-sound/abcm2ps
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/abcm2ps/ChangeLog,v 1.93 2014/06/03 06:42:34 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/abcm2ps/ChangeLog,v 1.94 2014/10/18 03:23:52 radhermit Exp $
+
+*abcm2ps-8.3.1 (18 Oct 2014)
+
+  18 Oct 2014; Tim Harder <radhermit@gentoo.org> +abcm2ps-8.3.1.ebuild:
+  Version bump.
 
 *abcm2ps-8.0.4 (03 Jun 2014)
 *abcm2ps-7.8.3 (03 Jun 2014)
